# NeoSnake

./: .gitignore  CMakeLists.txt  README.md
handlers/: arrowFunction.cpp  draw.cpp  fruitFunction.cpp  input.cpp  pathfinding.cpp  snakeFunction.cpp  update.cpp
header/: enemy.hpp  engine.hpp  fruit.hpp  levelMap.hpp  map.hpp  pathfinding.hpp  resource_path.h.in  snake.hpp
header/stateGameHandler/: gameOverScreen.hpp  iscreen.hpp  mainMenuScreen.hpp  nextLevelScreen.hpp  pauseScreen.hpp
resources/backgroundMenu/: menuBackground_enemies_background.csv  menuBackground_grass_background.csv  menuBackground_wall_background.csv
resources/maps/level01/: mapCSV_enemies_patrols.csv  mapCSV_grass.csv  mapCSV_grass_accessories.csv  mapCSV_wall.csv
resources/maps/level02/: mapCSV_enemies_patrols.csv  mapCSV_grass.csv  mapCSV_grass_accessories.csv  mapCSV_wall.csv
src/: enemy.cpp  engine.cpp  fruit.cpp  levelMap.cpp  map.cpp  snake.cpp
src/stateGameHandler/: gameOverScreen.cpp  mainMenuScreen.cpp  nextLevelScreen.cpp  pauseScreen.cpp
